# fw-nrfconnect-nrf

./: west.yml
boards/arm/pca20036_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  pca20036_nrf52840.dts  pca20036_nrf52840.yaml  pca20036_nrf52840_defconfig
doc/: CMakeLists.txt
doc/nrf/: examples.rst  nrf.doxyfile.in
include/: thingy52_orientation_handler.h
include/bluetooth/mesh/: models.h  models.rst  sensor.h  sensor_cli.h  thingy52.rst  whistle.h  whistle_cli.h  whistle_srv.h
lib/: CMakeLists.txt  Kconfig
lib/st25r3911b/: st25r3911b_nfca.c
lib/thingy52/orientation_handler/: CMakeLists.txt  Kconfig  thingy52_orientation_handler.c
samples/bluetooth/mesh/pca20036/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bluetooth/mesh/pca20036/include/: ethernet_command_system.h  ethernet_dfu.h  ethernet_logging.h  ethernet_utils.h  hp_led.h  model_handler.h  pca20036_ethernet.h
samples/bluetooth/mesh/pca20036/misc/backend/: dfu_all.py  dfu_sequentially.py  led_blink_all.py  led_blink_one.py  nodes_info.py  power_cycle_nodes.py  read_i_am_alive.py  reset_all.py
samples/bluetooth/mesh/pca20036/misc/tftp_server/: tftpd32.ini  windows_command.txt
samples/bluetooth/mesh/pca20036/src/: ethernet_command_system.c  ethernet_dfu.c  ethernet_logging.c  ethernet_utils.c  hp_led.c  main.c  model_handler.c  pca20036_ethernet.c
samples/nrf9160/mqtt_simple/: overlay-tls.conf  prj.conf
subsys/bluetooth/mesh/: CMakeLists.txt  Kconfig.models  sensor.c  sensor_cli.c  sensor_srv.c  whistle_cli.c  whistle_srv.c
(+145 files in other folders)
